# hpm_cmake_template

./: CMakeLists.txt  Kconfig  Kconfig.project  README.md  conf.cmake  hpm5300_all_in_one.cfg  hpm6280_all_in_one.cfg  hpm6e00_all_in_one.cfg  main.c
cmake/: python.cmake
configs/: hpm5300evk_defconfig  hpm6200evk_defconfig  hpm6e00evk_defconfig
